<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.landawn</groupId>
	<artifactId>mi-erp</artifactId>
	<version>0.1</version>
	<packaging>jar</packaging>
	<name>mi-erp</name>
	<description>Have a try project</description>
	<url>https://github.com/landawn/mi-erp</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>https://github.com/landawn/mi-erp/blob/master/LICENSE.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Haiyang Li</name>
			<email>70lihy@gmail.com</email>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/landawn/mi-erp.git</connection>
		<developerConnection>scm:git:https://github.com/landawn/mi-erp.git</developerConnection>
		<url>https://github.com/landawn/mi-erp</url>
	</scm>

	<properties>
		<java.version>25</java.version>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
		<maven.compiler.release>25</maven.compiler.release>
		<junit.jupiter.version>5.14.1</junit.jupiter.version>
		<junit.platform.version>1.14.1</junit.platform.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<repositories>
		<repository>
			<id>my-local-repo</id>
			<url>file://${project.basedir}/lib</url>
		</repository>
	</repositories>


	<dependencies>
		<dependency>
			<groupId>com.landawn</groupId>
			<artifactId>abacus-common</artifactId>
			<version>7.0.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.landawn</groupId>
			<artifactId>abacus-jdbc</artifactId>
			<version>4.0.9</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.landawn</groupId>
			<artifactId>abacus-query</artifactId>
			<version>4.0.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.42</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.5.0-jre</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.25.2</version>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>[9.5.0,)</version>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>7.0.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>7.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite-api</artifactId>
			<version>${junit.platform.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<version>${junit.platform.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<release>${maven.compiler.release}</release>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.42</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>


			<!-- https://bugs.openjdk.java.net/browse/JDK-8281944  -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<doctitle>mi-erp</doctitle>
					<show>public</show>
					<source>25</source>
					<encoding>UTF-8</encoding>
					<doclint>all</doclint>
					<source>${maven.compiler.source}</source>
					<detectJavaApiLink>false</detectJavaApiLink>
					<sourceFileExcludes>
					</sourceFileExcludes>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<includes>
						<include>**/HelloERPTest.java</include>
					</includes>
					<useModulePath>false</useModulePath>
					<testFailureIgnore>true</testFailureIgnore> <!-- set to false
					if you want failures to fail the build -->
					<argLine>
						-Dfile.encoding=UTF-8
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens
						java.base/java.lang.reflect=ALL-UNNAMED
						--add-opens
						java.base/java.io=ALL-UNNAMED
						--add-opens
						java.base/sun.nio.ch=ALL-UNNAMED
						--add-opens
						java.base/java.nio=ALL-UNNAMED
						--add-exports
						java.base/jdk.internal.ref=ALL-UNNAMED
						--add-exports
						java.base/sun.nio.ch=ALL-UNNAMED
						--add-exports
						jdk.unsupported/sun.misc=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.14</version>
				<executions>
					<!-- Prepare agent in all modules via inheritance -->
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<!-- Generate a single aggregated report at the parent -->
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
